<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardPreventCornerOverlap="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="150dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="#537de8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:text="@string/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombre_titulo"
                    android:layout_marginRight="10dp"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_orange_light" />

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nombre"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:textSize="12sp"
                   />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/entrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entrada_titulo"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_orange_light"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/entrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="entrada"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/cerrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cerrado_titulo"
                    android:layout_marginRight="10dp"
                    android:textSize="10sp"
                    android:textColor="@android:color/holo_orange_light" />

                <TextView
                    android:id="@+id/cerrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cerrado"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorBackgroundFloating"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/direccion_titulo"
            android:layout_marginRight="10dp"
            android:textSize="10sp"
            android:textColor="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="direccion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?attr/colorBackgroundFloating"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>